--- a/style.css
+++ b/style.css
@@ -1,173 +1,163 @@
-  @-webkit-keyframes bounce {
-        0% {
-    transform: scale(1,1) translate(0px, 0px);
-  }
-  
-  30%{
-    transform: scale(1,0.8) translate(0px, 10px); 
-  }
-
-  75%{
-    transform: scale(1,1.1) translate(0px, -25px); 
-  }
-  
- 100% {
-    transform: scale(1,1) translate(0px, 0px);
-  }
+body {
+  margin: 0;
+  background-image: url("Its-Quiz-Time.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.bounce {
-	 font-size: 30px;
-	 color: rgb(126,123,123);
-      text-align:center;
-      margin:0 auto;
-      margin-top:660px;
-      height:50px;
-      width:300px;
-      padding:20px;  
-      background:rgb(239,243,9);
-     -webkit-animation-name: bounce;
-     -webkit-animation-duration: 0.75s;
-    -webkit-animation-iteration-count: infinite;
-    cursor: pointer;
-     border-radius: 30px;
+.box {
+  width: 80%;
+  margin: 0 auto;
+  display: none;
+  background-color: rgba(100, 100, 100, 0.79);
+  color: #fff;
+  margin-top: 200px;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.79);
 }
 
 
 
-   .button{
+
+
+.button {
   padding: 15px 25px;
   font-size: 24px;
   text-align: center;
   cursor: pointer;
   outline: none;
   color: #fff;
-  background-color: #3B5998;
+  background-color: #3b5998;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
-  margin: 10px 0px 15px 90px;
-
+  margin: 20px;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {
+  background-color: #3e8e41;
+}
 
 .button:active {
-  background-color: #3B5998;
+  background-color: #3b5998;
   box-shadow: 0 5px #666;
   transform: translateY(15px);
 }
- 
-
-
 
 .btnNext {
-    position: relative;
-    background-color: #4CAF50;
-    border: none;
-    font-size: 12px;
-    color: #FFFFFF;
-    padding: 20px;
-    width: 100px;
-    text-align: center;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
+  position: relative;
+  background-color: #4caf50;
+  border: none;
+  font-size: 12px;
+  color: #ffffff;
+  padding: 20px;
+  width: 100px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
 
-    margin:auto;
-  display:block;
+  margin: auto;
+  display: block;
 
   margin-top: 15px;
 
-
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.79);
-    border-radius: 15px;
-
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.79);
+  border-radius: 15px;
 }
 
 .btnNext:after {
-    content: "";
-    background: #90EE90;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px!important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
+  content: "";
+  background: #90ee90;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
 }
 
 .btnNext:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
 }
 
 
- 
 
 
 
+.paragrapQestion {
+  margin-left: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+#lbl0 {
+  color: red;
+}
+.answers {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.label-holder {
+  width: 33.33%;
+  display: inline-block;
+  float: left;
+  height: auto;
+  overflow: hidden;
+}
+.label-holder label {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+.label-holder:first-child label {
+  text-align: left;
+}
+.label-holder:last-child label {
+  text-align: right;
+}
+@-webkit-keyframes bounce {
+  0% {
+    transform: scale(1, 1) translate(0px, 0px);
+  }
 
+  30% {
+    transform: scale(1, 0.8) translate(0px, 10px);
+  }
 
-body {
-	margin: 0;
-	 background-image: url("Its-Quiz-Time.jpg");
-	background-repeat: no-repeat;
-background-position: center center;
-background-attachment: fixed;
-background-size: cover;
+  75% {
+    transform: scale(1, 1.1) translate(0px, -25px);
+  }
 
-	 
-	  
-
+  100% {
+    transform: scale(1, 1) translate(0px, 0px);
+  }
 }
 
-
-.box{
-
-width: 80%; 
-margin: 0 auto;
-display: none;
-background-color:rgba(100,100,100,0.79);
-color: #fff;
-margin-top: 200px;
-   border: 1px solid;
-    padding: 10px;
-   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.79);
-
-
+.bounce {
+  font-size: 30px;
+  color: rgb(126, 123, 123);
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 660px;
+  height: 50px;
+  width: 300px;
+  padding: 20px;
+  background: rgb(239, 243, 9);
+  -webkit-animation-name: bounce;
+  -webkit-animation-duration: 0.75s;
+  -webkit-animation-iteration-count: infinite;
+  cursor: pointer;
+  border-radius: 30px;
 }
-
-.lblTimer{
-
-margin-left: 33%;
-}
-
-.lblQuestion{
-float:left;
-margin-right: 33%x;
-
-
-}
-.lblRemaining{
-
-
-	margin-left: 33%;
-}
-.paragrapQestion{
- margin-left: 20px;
- font-size: 30px;
- text-align: center;
-
-}
-#lbl0{
-color: red
-
-}
-
- 
