--- a/style.css
+++ b/style.css
@@ -20,10 +20,6 @@ body {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.79);
 }
 
-
-
-
-
 .button {
   padding: 15px 25px;
   font-size: 24px;
@@ -64,12 +60,9 @@ body {
   text-decoration: none;
   overflow: hidden;
   cursor: pointer;
-
   margin: auto;
   display: block;
-
   margin-top: 15px;
-
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.79);
   border-radius: 15px;
 }
@@ -94,25 +87,24 @@ body {
   transition: 0s;
 }
 
-
-
-
-
 .paragrapQestion {
   margin-left: 20px;
   font-size: 40px;
   text-align: center;
 }
+
 #lbl0 {
   color: red;
   font-size: 30px;
 }
+
 .answers {
   display: inline-block;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
+
 .label-holder {
   width: 33.33%;
   display: inline-block;
@@ -120,17 +112,21 @@ body {
   height: auto;
   overflow: hidden;
 }
+
 .label-holder label {
   display: block;
   width: 100%;
   text-align: center;
 }
+
 .label-holder:first-child label {
   text-align: left;
 }
+
 .label-holder:last-child label {
   text-align: right;
 }
+
 @-webkit-keyframes bounce {
   0% {
     transform: scale(1, 1) translate(0px, 0px);
@@ -151,20 +147,16 @@ body {
 .score{
  color:rgb(239, 243, 9);
 
-
 }
 #lastPage{
   text-align: center;
   font-size: 30px;
-  
   color: white;
-  
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-   width: 50%;
-
- margin-right: 120px;
+  width: 50%;
+  margin-right: 120px;
   background-color: rgba(100, 100, 100, 0.79);
   color: #fff;
   margin-top: 200px;
@@ -198,6 +190,7 @@ body {
   color: white;
   border-radius: 30px;
   margin:5px;
+  font-size: 20px;
 
 
 
